pom.xml descommeted final plugins tag

--- a/pom.xml
+++ b/pom.xml
@@ -139,8 +139,8 @@
 						<version>1.2.0</version>
 					</dependency>
 				</dependencies>
-			</plugin>  
-		</plugins> -->
+			</plugin>  -->
+		</plugins>
 		<!--
 		<finalName>App-de-Prueba</finalName>
 		-->
