--- a/pom.xml
+++ b/pom.xml
@@ -93,16 +93,18 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
+	
+			<!-- 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M7</version>
-				<!-- <configuration>
+				<configuration>
 					<includes>
 						<include>**/UserTest.java</include>
 						<include>**/registrationTest.java</include>
 					</includes>
-				</configuration> -->
+				</configuration> 
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.jupiter</groupId>
@@ -110,7 +112,7 @@
 						<version>5.4.0</version>
 					</dependency>
 				</dependencies>
-			</plugin>
+			</plugin> -->
 			
 
 			<!-- <plugin>
